fix overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 	box-sizing: border-box;
 	font-family: 'Press Start 2P';
 	user-select: none;
-	overflow: hidden;
 }
 
 body {
